--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Competency Framework Drag & Drop Game</title>
+    <title>Teach Plus Policy Leadership Competecies Drag & Drop Activity</title>
     <style>
         * {
             margin: 0;
@@ -561,4 +561,5 @@
         window.addEventListener('DOMContentLoaded', initializeGame);
     </script>
 </body>
+
 </html>
