--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -279,7 +279,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Competency Framework Drag & Drop Game</h1>
+        <h1>Teach Plus Policy Leadership Competecies Drag & Drop Activity</h1>
         <p class="instructions">Drag the skills from the bank below and drop them into the correct competency area. Each skill belongs to one specific competency!</p>
         
         <div class="score-display">
@@ -563,3 +563,4 @@
 </body>
 
 </html>
+
