--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teach Plus Policy Leadership Competecies Drag & Drop Activity</title>
+    <title>Teach Plus Policy Leadership Competencies Drag & Drop Activity</title>
     <style>
         * {
             margin: 0;
@@ -563,4 +563,5 @@
 </body>
 
 </html>
+
 
